src/test/ui/const-generics/generic_const_exprs/abstract-const-adts/different-variants.stderr
error: unconstrained generic constant
  --> $DIR/different-variants.rs:14:11
   |
LL |     bar::<{ MyEnum::Var2 { field: N } }>();
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); { MyEnum::Var2 { field: N } }]:`

error: aborting due to previous error

